tg_parser/tests/invalid/bad_index_missing_bracket.tg
circuit BadIndex(in a[4]; out y[4]) {
    NAND2 g1(a[0], a[1) -> y[0];
}
